cabal-version:      3.0
name:               sydtest-reproducer
version:            0.1.0.0
homepage:           https://github.com/sgillespie/sydtest-reproducer
license:            CC0-1.0
license-file:       LICENSE
author:             Sean D Gillespie
maintainer:         sean@mistersg.net
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

test-suite sydtest-reproducer-test
    import:           warnings
    default-language: Haskell2010
    other-modules:    Test.HspecSpec
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-tool-depends:
        sydtest-discover:sydtest-discover
    build-depends:
        base,
        hspec,
        sydtest,
        sydtest-hspec

    ghc-options: -threaded -rtsopts -with-rtsopts=-N
